fix(toast): wip additional spacing and token validation

--- a/components/toast/index.css
+++ b/components/toast/index.css
@@ -20,23 +20,28 @@
 
 	/* Size */
 	--spectrum-toast-corner-radius: var(--spectrum-corner-radius-800);
-	--spectrum-toast-block-size: var(--spectrum-toast-height);
 	--spectrum-toast-icon-block-size: var(--spectrum-workflow-icon-size-100);
+	--spectrum-toast-block-size: var(--spectrum-toast-height);
 	--spectrum-toast-max-inline-size: var(--spectrum-toast-maximum-width);
 
 	--spectrum-toast-line-height: var(--spectrum-line-height-100);
 	--spectrum-toast-line-height-cjk: var(--spectrum-cjk-line-height-100);
 
 	/* Space */
+	--spectrum-toast-spacing-toast-to-edge: var(--spectrum-spacing-300);
 	--spectrum-toast-spacing-close-button-to-edge: var(--spectrum-spacing-100);
+	--spectrum-toast-spacing-close-button-top-edge-to-close-button: var(--spectrum-spacing-200);
 	--spectrum-toast-spacing-text-to-close-button: var(--spectrum-spacing-300);
 	--spectrum-toast-spacing-text-to-button-horizontal: var(--spectrum-spacing-400);
+	--spectrum-toast-spacing-button-to-close-button-horizontal: var(--spectrum-spacing-200);
+	--spectrum-toast-spacing-text-to-button-vertical: var(--spectrum-spacing-100);
 	--spectrum-toast-spacing-icon-to-text: var(--spectrum-text-to-visual-300);
 
 	--spectrum-toast-spacing-start-edge-to-text-and-icon: var(--spectrum-spacing-300);
 	--spectrum-toast-spacing-button-to-close-button: var(--spectrum-spacing-200);
 
-	--spectrum-toast-spacing-top-edge-to-close-button: var(--spectrum-spacing-200);
+	--spectrum-toast-spacing-top-edge-to-button: var(--spectrum-spacing-200);
+	--spectrum-toast-spacing-bottom-edge-to-button: var(--spectrum-spacing-300);
 	--spectrum-toast-spacing-bottom-edge-to-close-button: var(--spectrum-spacing-200);
 
 	--spectrum-toast-spacing-top-edge-to-icon: var(--spectrum-toast-top-to-workflow-icon);
@@ -63,7 +68,8 @@
 	display: inline-flex;
 	flex-direction: row;
 	align-items: stretch;
-	min-block-size: var(--mod-toast-block-size, var(--spectrum-toast-block-size));
+	margin: var(--mod-toast-spacing-toast-to-edge, var(--spectrum-toast-spacing-toast-to-edge));
+	block-size: var(--mod-toast-block-size, var(--spectrum-toast-block-size));
 	max-inline-size: var(--mod-toast-max-inline-size, var(--spectrum-toast-max-inline-size));
 
 	border-radius: var(--mod-toast-corner-radius, var(--spectrum-toast-corner-radius));
@@ -115,17 +121,11 @@
 	flex: 1 1 auto;
 	display: inline-block;
 	box-sizing: border-box;
-
-	padding-block-start: calc(var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text)) - var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start)));
-	padding-block-end: calc(var(--mod-toast-spacing-bottom-edge-to-text, var(--spectrum-toast-spacing-bottom-edge-to-text)) - var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end)));
-
 	padding-inline-start: 0;
-
 	line-height: var(--mod-toast-line-height, var(--spectrum-toast-line-height));
-
 	text-align: start;
-
 	color: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));
+	white-space: nowrap;
 
 	&:lang(ja),
 	&:lang(zh),
@@ -134,34 +134,19 @@
 	}
 }
 
-.spectrum-Toast-buttons {
-	display: flex;
-	flex: 0 0 auto;
-	align-items: flex-start;
-
-	margin-block-start: var(--mod-toast-spacing-top-edge-to-close-button, var(--spectrum-toast-spacing-top-edge-to-close-button));
-	margin-block-end: var(--mod-toast-spacing-bottom-edge-to-close-button, var(--spectrum-toast-spacing-bottom-edge-to-close-button));
-	padding-inline-start: var(--mod-toast-spacing-text-to-close-button, var(--spectrum-toast-spacing-text-to-close-button));
-	padding-inline-end: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
-
-	.spectrum-CloseButton {
-		align-self: flex-start;
-	}
+.spectrum-CloseButton {
+	margin-block-start: var(--mod-toast-spacing-close-button-top-edge-to-close-button, var(--spectrum-toast-spacing-close-button-top-edge-to-close-button));
+	margin-inline-end: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
 }
 
 .spectrum-Toast .spectrum-Button {
 	margin-inline-start: var(--mod-toast-spacing-text-to-button-horizontal, var(--spectrum-toast-spacing-text-to-button-horizontal));
-}
-
-.spectrum-Toast:has(.spectrum-Button) {
-	.spectrum-Toast-buttons {
-		padding-inline-start: var(--mod-toast-spacing-button-to-close-button, var(--spectrum-toast-spacing-button-to-close-button));
-	}
+	margin-inline-end: var(--mod-toast-spacing-button-to-close-button-horizontal, var(--spectrum-toast-spacing-button-to-close-button-horizontal));
 }
 
 .spectrum-Toast-body {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	align-items: center;
 	flex: 1 1 auto;
 	align-self: center;
@@ -169,8 +154,4 @@
 
 	padding-block-start: var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start));
 	padding-block-end: var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end));
-
-	& + .spectrum-Toast-buttons {
-		padding-inline-start: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
-	}
 }
